--- a/app/src/main/res/layout/product_tile.xml
+++ b/app/src/main/res/layout/product_tile.xml
@@ -1,6 +1,8 @@
 <!-- A CardView that contains a TextView -->
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
@@ -9,7 +11,8 @@
     android:orientation="horizontal"
     android:layout_margin="10dp"
     card_view:contentPadding="16dp"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    tools:context="com.objectedge.payzoop.activity.ProductListingActivity">
 <LinearLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -70,6 +73,15 @@
         android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:orientation="horizontal"
         android:layout_gravity="right|bottom">
+
+        <com.objectedge.payzoop.customView.ElegantNumberButton
+            android:id="@+id/number_button"
+            android:layout_width="100dp"
+            app:backGroundColor="@color/colorPrimary"
+            app:textSize="8sp"
+            android:layout_marginTop="18dp"
+            android:layout_centerHorizontal="true"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/grid_text_price"
