--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -4,8 +4,9 @@
     android:layout_height="fill_parent">
 
     <ImageView android:id="@+id/splashscreen" android:layout_width="match_parent"
-        android:layout_height="420dp"
-        android:src="@mipmap/ic_launcher_payzoop_logo"
-        android:layout_gravity="center"/>
+        android:layout_height="450dp"
+        android:src="@drawable/rsz_logo_new"
+        android:layout_gravity="center"
+        android:layout_marginTop="70dp"/>
 
 </LinearLayout>
