--- a/app/src/main/res/layout/activity_product_listing.xml
+++ b/app/src/main/res/layout/activity_product_listing.xml
@@ -6,12 +6,64 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context="com.objectedge.payzoop.activity.CartActivity">
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:weightSum="1"
+        android:visibility="gone"
+        android:id="@+id/checksum_generation">
 
+        <TextView
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:text="@string/checksum_generation_url"
+            android:textStyle="bold"
+            android:textSize="16dip"
+            android:gravity="right"/>
+
+        <EditText
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:id="@+id/checksum_generation_url"
+            android:text="@string/sample_checksum_generation_url"
+            android:singleLine="true"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:weightSum="1"
+        android:visibility="gone"
+        android:id="@+id/checksum_verification">
+
+        <TextView
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:text="@string/checksum_verification_url"
+            android:textStyle="bold"
+            android:textSize="16dip"
+            android:gravity="right"/>
+
+        <EditText
+            android:layout_width="0dip"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.50"
+            android:id="@+id/checksum_verification_url"
+            android:text="@string/sample_checksum_verification_url"
+            android:singleLine="true"/>
+
+    </LinearLayout>
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center"
         android:layout_margin="@dimen/fab_margin"
         android:onClick="scanNow"
         android:src="@android:drawable/ic_menu_camera" />
@@ -39,5 +91,6 @@
         android:id="@+id/left_drawer"
         app:menu="@menu/activity_main_drawer" >
     </android.support.v7.widget.RecyclerView>
+
 </android.support.v4.widget.DrawerLayout>
 </android.support.design.widget.CoordinatorLayout>
