Updating the new revived Code for appetency 1)menu 2)got rid of scannerActivivty 3)added app colors 4)customPagerTabStrip

--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.objectedge.payzoop.activity.CartActivity">
+    tools:context="com.objectedge.restroappproto.activity.CartActivity">
 
     <include layout="@layout/content_cart" />
 
