--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="#cb202d">
 
     <ImageView android:id="@+id/splashscreen" android:layout_width="match_parent"
         android:layout_height="450dp"
-        android:src="@drawable/rsz_logo_new"
+        android:src="@drawable/splash_logo"
         android:layout_gravity="center"
         android:layout_marginTop="70dp"/>
 
