--- a/app/src/main/res/drawable/cart_count.xml
+++ b/app/src/main/res/drawable/cart_count.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#3CA9C1"/>
+    <solid android:color="#09b231"/>
     <size    android:width="16dp"
     android:height="16dp"/>
 </shape>
