--- a/app/src/main/res/values-w820dp/attrs.xml
+++ b/app/src/main/res/values-w820dp/attrs.xml
@@ -9,4 +9,8 @@
         <attr name="textSize" format="dimension"/>
         <attr name="backgroundDrawable" format="reference"/>
     </declare-styleable>
+
+    <declare-styleable name="CustomPagerTabStrip">
+        <attr name="indicatorColor" format="reference|color" />
+    </declare-styleable>
 </resources>
