--- a/app/src/main/res/layout/content_cart.xml
+++ b/app/src/main/res/layout/content_cart.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.objectedge.payzoop.activity.CartActivity"
+    tools:context="com.objectedge.restroappproto.activity.CartActivity"
     tools:showIn="@layout/activity_cart">
 
     <TextView
