--- a/app/src/main/res/values-w820dp/attrs.xml
+++ b/app/src/main/res/values-w820dp/attrs.xml
@@ -6,6 +6,7 @@
         <attr name="initialNumber" format="integer"/>
         <attr name="finalNumber" format="integer" />
         <attr name="textColor" format="color"/>
+        <attr name="controlerTextColor" format="color"/>
         <attr name="textSize" format="dimension"/>
         <attr name="backgroundDrawable" format="reference"/>
     </declare-styleable>
