--- a/app/src/main/res/layout/product_tile.xml
+++ b/app/src/main/res/layout/product_tile.xml
@@ -6,7 +6,7 @@
     android:id="@+id/card_view"
     android:layout_gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="120dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:layout_marginTop="2dp"
@@ -23,26 +23,24 @@
     android:id="@+id/product_list_item">
 
        <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-           android:padding="16dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/grid_image"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="top"
-            android:paddingRight="16dp"/>
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_gravity="top" />
        </LinearLayout>
 
-           <LinearLayout
+       <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
-               android:padding="16dp"
-               android:orientation="vertical">
+               android:padding="5dp"
+               android:orientation="vertical"
+               android:layout_gravity="right|top">
         <TextView
             android:id="@+id/grid_text"
             android:layout_width="wrap_content"
@@ -52,12 +50,12 @@
             android:textStyle="bold"
             android:textSize="16sp" />
 
-
-        <TextView
-            android:id="@+id/subtitle"
+         <TextView
+            android:id="@+id/grid_text_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingRight="16dp" />
+            android:textColor="@color/colorPrice"
+            android:text="5.0" />
 
         <TextView
             android:id="@+id/description"
@@ -67,7 +65,7 @@
             android:paddingRight="16dp" />
 
     </LinearLayout>
-</LinearLayout>
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -75,23 +73,27 @@
         android:orientation="horizontal"
         android:layout_gravity="right|bottom">
 
-        <com.objectedge.restroappproto.customView.ElegantNumberButton
-            android:id="@+id/number_button"
-            android:layout_width="100dp"
-            app:backGroundColor="@color/colorPrimary"
-            app:textSize="8sp"
-            android:layout_marginTop="18dp"
+        <Button
+            android:id="@+id/add_btn"
+            android:layout_width="85dp"
+            android:text="ADD"
+            android:textSize="20sp"
             android:layout_centerHorizontal="true"
-            android:layout_height="wrap_content" />
+            android:textColor="@color/colorSecondary"
+            android:layout_marginBottom="22dp"
+            android:background="@drawable/add_button"
+            android:layout_height="48dp"
+            />
 
-        <TextView
-            android:id="@+id/grid_text_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_gravity="center"
-            android:textColor="@color/colorPrice"
-            android:text="5.0" />
+        <com.objectedge.restroappproto.customView.ElegantNumberButton
+            android:layout_weight="1"
+            android:id="@+id/number_button"
+            android:layout_width="85dp"
+            app:textSize="6sp"
+            app:controlerTextColor="@color/colorSecondary"
+            android:layout_centerHorizontal="true"
+            android:layout_height="70dp"
+            android:visibility="gone"/>
     </LinearLayout>
-
+</LinearLayout>
 </android.support.v7.widget.CardView>
